    - Added debug option "action_timestamps" which outputs to stdout the absolute start and end time for each target.

  From Rob Boehne
    - Fix suncxx tool (Oracle Studio compiler) when using Python 3.  Previously would throw an exception.
      Resolved by properly handling tool version string output as unicode.

  From Tim Gates
    - Resolved a typo in engine.SCons.Tool

  From Ivan Kravets
    - Added support for "-imacros" to ParseFlags

  From Jacek Kuczera:
    - Fix CheckFunc detection code for Visual 2019. Some functions
      (e.g. memmove) were incorrectly recognized as not available.

  From Jakub Kulik
    - Fix subprocess result bytes not being decoded in SunOS/Solaris related tools.

  From Philipp Maierhöfer:
    - Avoid crash with UnicodeDecodeError on Python 3 when a Latex log file in
      non-UTF-8 encoding (e.g. containing umlauts in Latin-1 encoding when
      the fontenc package is included with \usepackage[T1]{fontenc}) is read.

  From Mathew Robinson:
    - Improved threading performance by ensuring NodeInfo is shared
      across threads. Results in ~13% improvement for parallel builds
      (-j# > 1) with many shared nodes.

  From Mats Wichmann
    - Replace instances of string find method with "in" checks where
      the index from find() was not used.
    - CmdStringHolder fix from issue #3428
    - Turn previously deprecated debug options into failures:
      --debug=tree, --debug=dtree, --debug=stree, --debug=nomemoizer.
    - Experimental New Feature: Enable caching MSVC configuration
      If SCONS_CACHE_MSVC_CONFIG shell environment variable is set,
      SCons will cache the results of past calls to vcvarsall.bat to
      a file; integrates with existing memoizing of such vars.
      On vs2019 saves 5+ seconds per SCons invocation, which really
      helps test suite runs.
    - Remove deprecated SourceSignatures, TargetSignatures
    - Remove deprecated Builder keywords: overrides and scanner

