@@ -853,6 +853,16 @@ class CommandAction(_ActionAction):
                                 "a single command")
         self.cmd_list = cmd
 
+        # Regex meant to parse a file path in the following cases:
+        #   /path/to/file
+        #   '/path/to/file'
+        #   "C:\path\to\file"
+        # Does not allow for stripping off an optional @ before the parameter.
+        # We don't need to support detecting temp files generated by
+        # TempFileMunge because in signature mode (which is what is used during
+        # action scanning) TempFileMunge doesn't modify the command string.
+        self.command_strip = re.compile('^[\'"]?([^\'"]*)[\'"]?$')
+
     def __str__(self):
         if is_List(self.cmd_list):
             return ' '.join(map(str, self.cmd_list))
@@ -987,15 +997,26 @@ class CommandAction(_ActionAction):
         else:
             cmd_list = env.subst_list(self.cmd_list, SUBST_SIG, target, source)
         res = []
+
+        # Avoid circular dependencies by ignoring any paths to targets.
+        targets_norm = set()
+        for t in target:
+            targets_norm.add(os.path.normcase(t.abspath))
+            targets_norm.add(os.path.normcase(str(t)))
+
         for cmd_line in cmd_list:
             if cmd_line:
-                d = str(cmd_line[0])
-                m = strip_quotes.match(d)
-                if m:
-                    d = m.group(1)
-                d = env.WhereIs(d)
-                if d:
-                    res.append(env.fs.File(d))
+                for entry in cmd_line:
+                    d = str(entry)
+                    if not d.startswith(('&', '-', '/') if os.name == 'nt'
+                                        else ('&', '-')):
+                        m = self.command_strip.match(d)
+                        if m:
+                            d = m.group(1)
+                            # For now, only match files, not directories.
+                            d = d if os.path.isfile(d) else env.WhereIs(d)
+                            if d and os.path.normcase(d) not in targets_norm:
+                                res.append(env.fs.File(d))
         return res
 
 
