@@ -40,6 +40,8 @@ _python_ = TestSCons._python_
 
 test = TestSCons.TestSCons()
 
+test.write('file.in',     "file.in\n")
+
 generate_build_py_py_contents = """\
 #!%(python)s
 import os
@@ -61,17 +63,17 @@ os.chmod(sys.argv[1], 0o755)
 
 """
 
-extra = ''
-test.write('generate_build_py.py', generate_build_py_py_contents % locals())
-
+workpath = test.workpath()
 test.write('SConstruct', """
 DefaultEnvironment(tools=[])
 generate = Builder(action = r'%(_python_)s $GENERATE $TARGET')
-build = Builder(action = r'$BUILD_PY $TARGET $SOURCES')
+build = Builder(action = r'%(_python_)s $BUILD_PY $TARGET $SOURCES')
+cd_and_build = Builder(action = r'cd %(workpath)s && %(_python_)s $BUILD_PY $TARGET $SOURCES')
 env = Environment(tools=[],
                   BUILDERS = {
                         'GenerateBuild' : generate,
                         'BuildFile' : build,
+                        'CdAndBuildFile': cd_and_build,
                   },
                   GENERATE = 'generate_build_py.py',
                   BUILD_PY = 'build.py',
@@ -94,40 +96,44 @@ envNone.BuildFile('fileNone.out',       'file.in')
 envFalse.BuildFile('fileFalse.out',     'file.in')
 envTrue.BuildFile('fileTrue.out',       'file.in')
 envTrue.BuildFile('fileQuote.out',      'file.in', BUILD_PY='"build.py"')
+
+env.CdAndBuildFile('cd_file.out',       'file.in')
 """ % locals())
 
 
 
-test.write('file.in',     "file.in\n")
+def run_test(extra, python, _python_):
+    # Write the generate_build_py.py file. This uses the contents of the
+    # variable "extra" while writing build.py.
+    test.write('generate_build_py.py',
+               generate_build_py_py_contents % locals())
 
-test.run(arguments = '--tree=all .')
+    # Run the SConscript file.
+    test.run(arguments = '--tree=all .')
 
-expect_none = 'build.py %s file.in\nfile.in\n'
+    # Generate some expected data, which depends on the value of "extra".
+    expect_none = 'build.py %s file.in\nfile.in\n'
+    expect_extra = (expect_none if not extra else
+        'build.py %s file.in\n{}file.in\n'.format(
+            extra.replace('\\\\n', '\n')))
+    expect_extra_abs = '{} %s file.in\n{}file.in\n'.format(
+        test.workpath('build.py'),
+        extra.replace('\\\\n', '\n'))
 
-test.must_match('file.out',         expect_none % 'file.out', mode='r')
-test.must_match('file0.out',        expect_none % 'file0.out', mode='r')
-test.must_match('file1.out',        expect_none % 'file1.out', mode='r')
-test.must_match('fileNone.out',     expect_none % 'fileNone.out', mode='r')
-test.must_match('fileFalse.out',    expect_none % 'fileFalse.out', mode='r')
-test.must_match('fileTrue.out',     expect_none % 'fileTrue.out', mode='r')
-test.must_match('fileQuote.out',    expect_none % 'fileQuote.out', mode='r')
+    # Verify that the output matches what is expected.
+    test.must_match('file.out',      expect_extra % 'file.out', mode='r')
+    test.must_match('file0.out',     expect_none % 'file0.out', mode='r')
+    test.must_match('file1.out',     expect_extra % 'file1.out', mode='r')
+    test.must_match('fileNone.out',  expect_none % 'fileNone.out', mode='r')
+    test.must_match('fileFalse.out', expect_none % 'fileFalse.out', mode='r')
+    test.must_match('fileTrue.out',  expect_extra % 'fileTrue.out', mode='r')
+    test.must_match('fileQuote.out', expect_extra % 'fileQuote.out', mode='r')
+    test.must_match('cd_file.out',   expect_extra % 'cd_file.out', mode='r')
 
 
+run_test('', python, _python_)
+run_test('xyzzy\\\\n', python, _python_)
 
-extra = 'xyzzy\\\\n'
-test.write('generate_build_py.py', generate_build_py_py_contents % locals())
-
-test.run(arguments = '--tree=all .')
-
-expect_extra = 'build.py %s file.in\nxyzzy\nfile.in\n'
-
-test.must_match('file.out',         expect_extra % 'file.out', mode='r')
-test.must_match('file0.out',        expect_none % 'file0.out', mode='r')
-test.must_match('file1.out',        expect_extra % 'file1.out', mode='r')
-test.must_match('fileNone.out',     expect_none % 'fileNone.out', mode='r')
-test.must_match('fileFalse.out',    expect_none % 'fileFalse.out', mode='r')
-test.must_match('fileTrue.out',     expect_extra % 'fileTrue.out', mode='r')
-test.must_match('fileQuote.out',    expect_extra % 'fileQuote.out', mode='r')
 
 
 test.pass_test()
